# AutoDiag

./: DAY15_CHECKJNI_TEST.sh  DAY20_TEST
.github/workflows/: ci.yml
android/: .gitignore  settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/vdiag/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/aidl/com/vdiag/: DiagRequest.aidl  IDiagCallback.aidl  IDiagCarService.aidl
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_callback.cpp  jni_callback.h  jni_onload.cpp
android/app/src/main/java/com/vdiag/: MainActivity.java
android/app/src/main/java/com/vdiag/sdk/: DiagClient.java  DiagListener.java  DiagProperty.java
android/app/src/main/java/com/vdiag/service/: ClientRegistry.java  DiagCarService.java  DiagCarServiceBinder.java  DiagHalBridge.java  PermissionGate.java
android/app/src/main/java/com/vdiag/ui/: ResultAdapter.java  ResultItem.java
android/app/src/main/res/drawable/: status_dot.xml
android/app/src/main/res/layout/: activity_main.xml  item_result.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/vdiag/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
docs/: architecture.md  day36_day39_sdk_deep_dive.md  lessons.md
hal/: CMakeLists.txt
hal/build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_uds_codec
hal/build_asan/Testing/Temporary/: CTestCostData.txt
hal/include/: diag_engine.h  diag_type.h  idiag_hal.h  mock_diag_hal.h  session_state.h  uds_codec.h
hal/src/: diag_engine.cpp  dummy.cpp  mock_diag_hal.cpp  session_state.cpp  uds_codec.cpp
hal/tests/: test_diag_engine.cpp  test_mock_hal.cpp  test_session_state.cpp  test_uds_codec.cpp  test_uds_strategy.cpp
